--- a/client/src/components/tvShow/tvshow.css
+++ b/client/src/components/tvShow/tvshow.css
@@ -10,7 +10,7 @@
   /* entire wrapper */
   .commentsWrapper {
     padding: 1rem 3rem;
-    background-color: rgb(16, 16, 41);
+    background-color:#3f51b5;
     border-radius: 3px;
     color: white;
   }
